Refactor: Streamline steps 01-04 into a unified clean pipeline

--- a/step_01_prepare_structure.ipynb
+++ b/step_01_prepare_structure.ipynb
@@ -1,66 +1,136 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "18e5efd8906b400b",
    "metadata": {
     "collapsed": true
    },
-   "cell_type": "markdown",
-   "source": "# Read or generate a structure",
-   "id": "18e5efd8906b400b"
+   "source": [
+    "# Read or generate a structure"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "3285825efde131c0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2026-01-26T02:07:48.460913300Z",
      "start_time": "2026-01-26T02:07:30.419236700Z"
     }
    },
-   "cell_type": "code",
-   "source": "import main",
-   "id": "3285825efde131c0",
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'dftpy'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[1], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01mmain\u001B[39;00m\n",
-      "File \u001B[1;32mD:\\Code\\nano_tensile_TFvW\\main.py:11\u001B[0m\n\u001B[0;32m      8\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01mase\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mio\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m read, write\n\u001B[0;32m     10\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01mstrain_engine\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m apply_strain\n\u001B[1;32m---> 11\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01mdft_engine\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m relax_atoms\n\u001B[0;32m     14\u001B[0m \u001B[38;5;66;03m# ---------- Grid Conversion: ecut(eV) -> spacing(Angstrom) ----------\u001B[39;00m\n\u001B[0;32m     15\u001B[0m \u001B[38;5;66;03m# Nyquist: Gmax ~ pi / h  (h in bohr)\u001B[39;00m\n\u001B[0;32m     16\u001B[0m \u001B[38;5;66;03m# Ecut(Ha) = 0.5 * Gmax^2 = pi^2 / (2 h^2)\u001B[39;00m\n\u001B[0;32m     17\u001B[0m \u001B[38;5;66;03m# => h(bohr) = pi / sqrt(2*Ecut(Ha))\u001B[39;00m\n\u001B[0;32m     18\u001B[0m \u001B[38;5;66;03m# Ecut(Ha) = Ecut(eV) / Ha_to_eV\u001B[39;00m\n\u001B[0;32m     19\u001B[0m HA_TO_EV \u001B[38;5;241m=\u001B[39m \u001B[38;5;241m27.211386245988\u001B[39m\n",
-      "File \u001B[1;32mD:\\Code\\nano_tensile_TFvW\\dft_engine.py:10\u001B[0m\n\u001B[0;32m      7\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01mase\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mconstraints\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m FixAtoms\n\u001B[0;32m      8\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01mase\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01moptimize\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m BFGS\n\u001B[1;32m---> 10\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01mdftpy\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mconfig\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m DefaultOption, OptionFormat\n\u001B[0;32m     11\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01mdftpy\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mapi\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mapi4ase\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m DFTpyCalculator\n\u001B[0;32m     14\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21m_build_dftpy_config\u001B[39m(pp_file: \u001B[38;5;28mstr\u001B[39m \u001B[38;5;241m|\u001B[39m Path, spacing: \u001B[38;5;28mfloat\u001B[39m, atoms) \u001B[38;5;241m-\u001B[39m\u001B[38;5;241m>\u001B[39m OptionFormat:\n",
-      "\u001B[1;31mModuleNotFoundError\u001B[0m: No module named 'dftpy'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PWD = /Users/dawson666/Desktop/nano_tensile_TFvW\n",
+      "WORKDIR = /Users/dawson666/Desktop/nano_tensile_TFvW/cases/case_center\n",
+      "main = /Users/dawson666/Desktop/nano_tensile_TFvW/main.py\n"
      ]
     }
    ],
-   "execution_count": 1
+   "source": [
+    "from pathlib import Path\n",
+    "import json\n",
+    "import numpy as np\n",
+    "from ase.io import read, write\n",
+    "\n",
+    "import main\n",
+    "\n",
+    "ROOT = Path.cwd()\n",
+    "WORKDIR = ROOT / \"cases\" / \"case_center\"\n",
+    "WORKDIR.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "print(\"PWD =\", ROOT)\n",
+    "print(\"WORKDIR =\", WORKDIR)\n",
+    "print(\"main =\", Path(main.__file__).resolve())"
+   ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c14dc21a",
    "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "72feeebd8df3391b"
+   "execution_count": 17,
+   "id": "72feeebd8df3391b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "N_atoms = 359\n"
+     ]
+    }
+   ],
+   "source": [
+    "SRC = ROOT / \"picked\" / \"center.vasp\"\n",
+    "assert SRC.exists(), f\"Missing {SRC}\"\n",
+    "\n",
+    "atoms = read(str(SRC))\n",
+    "print(\"N_atoms =\", len(atoms))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "625f3aa3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved: /Users/dawson666/Desktop/nano_tensile_TFvW/cases/case_center/init.vasp\n",
+      "Saved: /Users/dawson666/Desktop/nano_tensile_TFvW/cases/case_center/init.xyz\n",
+      "Saved: /Users/dawson666/Desktop/nano_tensile_TFvW/cases/case_center/meta.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "init_vasp = WORKDIR / \"init.vasp\"\n",
+    "init_xyz  = WORKDIR / \"init.xyz\"\n",
+    "meta_json = WORKDIR / \"meta.json\"\n",
+    "\n",
+    "write(str(init_vasp), atoms, vasp5=True, direct=True)\n",
+    "write(str(init_xyz), atoms)\n",
+    "\n",
+    "pos = atoms.get_positions()\n",
+    "meta = {\n",
+    "    \"n_atoms\": int(len(atoms)),\n",
+    "    \"cell_lengths\": atoms.get_cell().lengths().tolist(),\n",
+    "    \"z_range\": float(pos[:,2].max() - pos[:,2].min()),\n",
+    "}\n",
+    "meta_json.write_text(json.dumps(meta, indent=2))\n",
+    "\n",
+    "print(\"Saved:\", init_vasp)\n",
+    "print(\"Saved:\", init_xyz)\n",
+    "print(\"Saved:\", meta_json)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "dftpy_env",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
