--- a/step_03_prepare_strain_calculation.ipynb
+++ b/step_03_prepare_strain_calculation.ipynb
@@ -1,56 +1,156 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "158271951a6c123e",
    "metadata": {
     "collapsed": true
    },
-   "cell_type": "markdown",
-   "source": "# define strain computation setup",
-   "id": "158271951a6c123e"
+   "source": [
+    "# define strain computation setup"
+   ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8d98a69ae41ff831",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2026-01-26T02:12:23.618260500Z",
      "start_time": "2026-01-26T02:12:23.606248800Z"
     }
    },
-   "cell_type": "markdown",
-   "source": "## define grip\n",
-   "id": "8d98a69ae41ff831"
+   "source": [
+    "## define grip\n"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "## check that enough layers",
-   "id": "4b7eb1b89d9727c4"
+   "id": "4b7eb1b89d9727c4",
+   "metadata": {},
+   "source": [
+    "## check that enough layers"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "d8b8f8082d6f7d53"
+   "execution_count": 6,
+   "id": "d8b8f8082d6f7d53",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "N_atoms = 359\n",
+      "Bottom atoms = 41\n",
+      "Top atoms    = 38\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pathlib import Path\n",
+    "import numpy as np\n",
+    "from ase.io import read, write\n",
+    "import strain_engine\n",
+    "\n",
+    "ROOT = Path.cwd()\n",
+    "WORKDIR = ROOT / \"cases\" / \"case_center\"\n",
+    "\n",
+    "ref_xyz = WORKDIR / \"cycle_000_relaxed.xyz\"\n",
+    "assert ref_xyz.exists(), f\"Missing {ref_xyz}\"\n",
+    "\n",
+    "bottom_idx = np.load(WORKDIR / \"bottom_idx.npy\")\n",
+    "top_idx = np.load(WORKDIR / \"top_idx.npy\")\n",
+    "\n",
+    "atoms = read(str(ref_xyz))\n",
+    "\n",
+    "print(\"N_atoms =\", len(atoms))\n",
+    "print(\"Bottom atoms =\", len(bottom_idx))\n",
+    "print(\"Top atoms    =\", len(top_idx))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "0cab27d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Strain axis = 2\n",
+      "Strain step = 0.01\n"
+     ]
+    }
+   ],
+   "source": [
+    "strain_axis = 2\n",
+    "strain_step = 0.01\n",
+    "cycle = 1\n",
+    "\n",
+    "print(\"Strain axis =\", strain_axis)\n",
+    "print(\"Strain step =\", strain_step)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "45d5d82c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[apply_strain] axis=2 strain_rate=0.010000 z_bot=2.338269 z_top=37.412297 L=35.074029 dL=0.350740\n",
+      "[apply_strain] fixed atoms: bottom=41 top=38 total_fixed=79 stretched=280\n",
+      "[apply_strain] top z(min/mean/max)=37.412297/38.581432/39.750566\n",
+      "[apply_strain] bot z(min/mean/max)=0.000000/1.083588/2.338269\n",
+      "[apply_strain] stretched z(min/max)=3.301610/36.264273\n",
+      "Saved: /Users/dawson666/Desktop/nano_tensile_TFvW/cases/case_center/cycle_001_stretched.xyz\n",
+      "Gauge_L_before_A = 35.074029\n",
+      "dL_A             = 0.350740\n"
+     ]
+    }
+   ],
+   "source": [
+    "atoms_stretched, info = strain_engine.apply_strain(\n",
+    "    atoms,\n",
+    "    strain_step,\n",
+    "    bottom_idx,\n",
+    "    top_idx,\n",
+    "    axis=strain_axis,\n",
+    "    debug=True,\n",
+    "    return_info=True,\n",
+    ")\n",
+    "\n",
+    "out_xyz = WORKDIR / f\"cycle_{cycle:03d}_stretched.xyz\"\n",
+    "write(str(out_xyz), atoms_stretched)\n",
+    "\n",
+    "print(\"Saved:\", out_xyz)\n",
+    "print(\"Gauge_L_before_A =\", f\"{info['L']:.6f}\")\n",
+    "print(\"dL_A             =\", f\"{info['dL']:.6f}\")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "dftpy_env",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
