Refactor workflow: atomic-step notebooks + vacancy/grip alignment

--- a/step_01_prepare_structure.ipynb
+++ b/step_01_prepare_structure.ipynb
@@ -11,107 +11,73 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "3285825efde131c0",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2026-01-26T02:07:48.460913300Z",
-     "start_time": "2026-01-26T02:07:30.419236700Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "PWD = /Users/dawson666/Desktop/nano_tensile_TFvW\n",
-      "WORKDIR = /Users/dawson666/Desktop/nano_tensile_TFvW/cases/case_center\n",
-      "main = /Users/dawson666/Desktop/nano_tensile_TFvW/main.py\n"
-     ]
-    }
-   ],
-   "source": [
-    "from pathlib import Path\n",
-    "import json\n",
-    "import numpy as np\n",
-    "from ase.io import read, write\n",
-    "\n",
-    "import main\n",
-    "\n",
-    "ROOT = Path.cwd()\n",
-    "WORKDIR = ROOT / \"cases\" / \"case_center\"\n",
-    "WORKDIR.mkdir(parents=True, exist_ok=True)\n",
-    "\n",
-    "print(\"PWD =\", ROOT)\n",
-    "print(\"WORKDIR =\", WORKDIR)\n",
-    "print(\"main =\", Path(main.__file__).resolve())"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "c14dc21a",
+   "id": "a9591fd0",
    "metadata": {},
+   "source": [
+    "Step 01 – Prepare initial nanocrystal structure\n",
+    "\n",
+    "This notebook generates the initial Al nanocrystal used for tensile tests.\n",
+    "No grips, no vacancies, no strain are applied at this stage.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "cd165e24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A0 = 4.05\n",
+    "SIZE = 3.5\n",
+    "LENGTH_Z = 40.0\n",
+    "GAMMA100 = 1.00\n",
+    "GAMMA110 = 1.06"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "c95282ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Atoms: 90\n",
+      "Cell: [14.05  14.05  38.475]\n",
+      "Written: structure_0.xyz / structure_0.vasp\n"
+     ]
+    }
+   ],
+   "source": [
+    "from ase_nanocrystal import build_wulff_nanocrystal\n",
+    "from ase.io import write\n",
+    "\n",
+    "atoms = build_wulff_nanocrystal(\n",
+    "    a0=A0,\n",
+    "    size=SIZE,\n",
+    "    length_z=LENGTH_Z,\n",
+    "    gamma100=GAMMA100,\n",
+    "    gamma110=GAMMA110,\n",
+    ")\n",
+    "\n",
+    "write(\"structure_0.xyz\", atoms)\n",
+    "write(\"structure_0.vasp\", atoms, vasp5=True, direct=True)\n",
+    "\n",
+    "print(\"Atoms:\", len(atoms))\n",
+    "print(\"Cell:\", atoms.get_cell().lengths())\n",
+    "print(\"Written: structure_0.xyz / structure_0.vasp\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8bce0f2",
+   "metadata": {},
+   "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "72feeebd8df3391b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "N_atoms = 359\n"
-     ]
-    }
-   ],
-   "source": [
-    "SRC = ROOT / \"picked\" / \"center.vasp\"\n",
-    "assert SRC.exists(), f\"Missing {SRC}\"\n",
-    "\n",
-    "atoms = read(str(SRC))\n",
-    "print(\"N_atoms =\", len(atoms))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "625f3aa3",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved: /Users/dawson666/Desktop/nano_tensile_TFvW/cases/case_center/init.vasp\n",
-      "Saved: /Users/dawson666/Desktop/nano_tensile_TFvW/cases/case_center/init.xyz\n",
-      "Saved: /Users/dawson666/Desktop/nano_tensile_TFvW/cases/case_center/meta.json\n"
-     ]
-    }
-   ],
-   "source": [
-    "init_vasp = WORKDIR / \"init.vasp\"\n",
-    "init_xyz  = WORKDIR / \"init.xyz\"\n",
-    "meta_json = WORKDIR / \"meta.json\"\n",
-    "\n",
-    "write(str(init_vasp), atoms, vasp5=True, direct=True)\n",
-    "write(str(init_xyz), atoms)\n",
-    "\n",
-    "pos = atoms.get_positions()\n",
-    "meta = {\n",
-    "    \"n_atoms\": int(len(atoms)),\n",
-    "    \"cell_lengths\": atoms.get_cell().lengths().tolist(),\n",
-    "    \"z_range\": float(pos[:,2].max() - pos[:,2].min()),\n",
-    "}\n",
-    "meta_json.write_text(json.dumps(meta, indent=2))\n",
-    "\n",
-    "print(\"Saved:\", init_vasp)\n",
-    "print(\"Saved:\", init_xyz)\n",
-    "print(\"Saved:\", meta_json)"
-   ]
   }
  ],
  "metadata": {
