--- a/step_03_prepare_strain_calculation.ipynb
+++ b/step_03_prepare_strain_calculation.ipynb
@@ -28,110 +28,85 @@
    "id": "4b7eb1b89d9727c4",
    "metadata": {},
    "source": [
-    "## check that enough layers"
+    "## check that enough layers\n",
+    "A single vacancy is created inside the free region.\n",
+    "Grip indices are updated accordingly."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d8b8f8082d6f7d53",
+   "id": "45a08bfe",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "N_atoms = 359\n",
-      "Bottom atoms = 41\n",
-      "Top atoms    = 38\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from pathlib import Path\n",
-    "import numpy as np\n",
-    "from ase.io import read, write\n",
-    "import strain_engine\n",
-    "\n",
-    "ROOT = Path.cwd()\n",
-    "WORKDIR = ROOT / \"cases\" / \"case_center\"\n",
-    "\n",
-    "ref_xyz = WORKDIR / \"cycle_000_relaxed.xyz\"\n",
-    "assert ref_xyz.exists(), f\"Missing {ref_xyz}\"\n",
-    "\n",
-    "bottom_idx = np.load(WORKDIR / \"bottom_idx.npy\")\n",
-    "top_idx = np.load(WORKDIR / \"top_idx.npy\")\n",
-    "\n",
-    "atoms = read(str(ref_xyz))\n",
-    "\n",
-    "print(\"N_atoms =\", len(atoms))\n",
-    "print(\"Bottom atoms =\", len(bottom_idx))\n",
-    "print(\"Top atoms    =\", len(top_idx))"
+    "VAC_TAG = \"vac1\"\n",
+    "SEED = 42"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0cab27d3",
+   "id": "e3d67dd6",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Strain axis = 2\n",
-      "Strain step = 0.01\n"
+      "[Vacancy] input        : structure_0.xyz\n",
+      "[Vacancy] total atoms  : 90\n",
+      "[Vacancy] fixed atoms  : 18  free atoms : 72\n",
+      "[Vacancy] removed index: 7  (removed from FREE region)\n",
+      "[Vacancy] after vacancy: 89\n",
+      "[Vacancy] Written      : vac1.xyz, vac1.vasp\n",
+      "[Vacancy] Updated idx  : bottom_idx_vac1.npy, top_idx_vac1.npy\n",
+      "[Vacancy] NOTE: main.py must use the UPDATED idx files for this vac structure.\n"
      ]
     }
    ],
    "source": [
-    "strain_axis = 2\n",
-    "strain_step = 0.01\n",
-    "cycle = 1\n",
-    "\n",
-    "print(\"Strain axis =\", strain_axis)\n",
-    "print(\"Strain step =\", strain_step)"
+    "!python make_vacancy.py \\\n",
+    "    --input structure_0.xyz \\\n",
+    "    --bottom bottom_idx.npy \\\n",
+    "    --top top_idx.npy \\\n",
+    "    --tag {VAC_TAG}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "45d5d82c",
+   "id": "7dda05b2",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[apply_strain] axis=2 strain_rate=0.010000 z_bot=2.338269 z_top=37.412297 L=35.074029 dL=0.350740\n",
-      "[apply_strain] fixed atoms: bottom=41 top=38 total_fixed=79 stretched=280\n",
-      "[apply_strain] top z(min/mean/max)=37.412297/38.581432/39.750566\n",
-      "[apply_strain] bot z(min/mean/max)=0.000000/1.083588/2.338269\n",
-      "[apply_strain] stretched z(min/max)=3.301610/36.264273\n",
-      "Saved: /Users/dawson666/Desktop/nano_tensile_TFvW/cases/case_center/cycle_001_stretched.xyz\n",
-      "Gauge_L_before_A = 35.074029\n",
-      "dL_A             = 0.350740\n"
+      "Atoms after vacancy: 89\n",
+      "Bottom idx: 9 Top idx: 9\n"
      ]
     }
    ],
    "source": [
-    "atoms_stretched, info = strain_engine.apply_strain(\n",
-    "    atoms,\n",
-    "    strain_step,\n",
-    "    bottom_idx,\n",
-    "    top_idx,\n",
-    "    axis=strain_axis,\n",
-    "    debug=True,\n",
-    "    return_info=True,\n",
-    ")\n",
+    "import numpy as np\n",
+    "from ase.io import read\n",
     "\n",
-    "out_xyz = WORKDIR / f\"cycle_{cycle:03d}_stretched.xyz\"\n",
-    "write(str(out_xyz), atoms_stretched)\n",
+    "atoms = read(\"vac1.xyz\")\n",
+    "b = np.load(\"bottom_idx_vac1.npy\")\n",
+    "t = np.load(\"top_idx_vac1.npy\")\n",
     "\n",
-    "print(\"Saved:\", out_xyz)\n",
-    "print(\"Gauge_L_before_A =\", f\"{info['L']:.6f}\")\n",
-    "print(\"dL_A             =\", f\"{info['dL']:.6f}\")"
+    "print(\"Atoms after vacancy:\", len(atoms))\n",
+    "print(\"Bottom idx:\", len(b), \"Top idx:\", len(t))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b08bf3d5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
